/*
* Copyright (C) 2024 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*     http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/

syntax = "proto3";

package com.android.adservices.service.proto;
option java_multiple_files = true;

// The list of apis/groups that deny the calling package
// These are groups which apis are part of like Global, topics, measurement, pa or ux
// Example measurement and topics apis want to deny app xyz
message ApiGroups {
  repeated string apiGroup = 1;
}

// The calling package's version range to deny for set of apis/groups
// Example app xyz with version 1000 to 1004 should be denied for api groups measurement and topics
message ApiDenyGroupsForPackageVersions {
  optional int64 packageMinVersion = 1;
  optional int64 packageMaxVersion = 2;
  ApiGroups apiGroups = 3;
}

// The type of package whether an app or sdk
enum PackageType {
  UNKNOWN = 0;
  APP = 1;
  SDK = 2;
}

// The List of Apis groups to deny for a package based on different version range
// And if the calling package is app or sdk
// SDK name abc should be denied for api groups measurement and topics for version 1001 to 1005
// and denied for api groups Global (all apis) for version less than 900
message ApiDenyGroupsForPackage {
  PackageType packageType = 1;
  repeated ApiDenyGroupsForPackageVersions apiDenyGroupsForPackageVersions = 2;
}

// Map of package name as key and the value as List of Api deny groups based on
// package version range and type of package as skd or app.
// The package name should match the entire name of the package installed on device including the case
message PackageToApiDenyGroupsMap {
  map<string, ApiDenyGroupsForPackage> map = 1;
}